@@ -5,6 +5,7 @@ LIST OF CHANGES
    previous command line was too long for large pools
  - changes for pools with >999 samples, LSF job array index now 5 digits
    modified tests
+ - added lims_driver_type cli option
 
 release 51.0
  - use npg_irods npg_publish_illumina_run.pl in place of data_handling irods_bam_loader.pl
